[gd_scene load_steps=2 format=3 uid="uid://dfiq87x3kjssf"]

[ext_resource type="Script" uid="uid://beibtdv1mqdi0" path="res://scripts/settings.gd" id="1_5p8wc"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p8wc")

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="apply_and_go_back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.5
offset_top = -95.0
offset_right = 47.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
text = "Apply and go back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -202.0
offset_right = 133.5
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 69
text = "Settings"

[node name="sound_settings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/sound_settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "Sound settings"

[node name="master_sound" type="HSlider" parent="VBoxContainer/sound_settings"]
layout_mode = 2

[node name="music_sound" type="HSlider" parent="VBoxContainer/sound_settings"]
layout_mode = 2

[node name="sfx_sound" type="HSlider" parent="VBoxContainer/sound_settings"]
layout_mode = 2

[node name="video_settings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/video_settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "Video settings"

[node name="screen_resolution" type="OptionButton" parent="VBoxContainer/video_settings"]
layout_mode = 2

[node name="fullscreen" type="Button" parent="VBoxContainer/video_settings"]
layout_mode = 2
text = "Toggle fullscreen"

[node name="Gameplay" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Gameplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "Gameplay"

[node name="sensitivity_sldr" type="HSlider" parent="VBoxContainer/Gameplay"]
layout_mode = 2

[node name="fov_sldr" type="HSlider" parent="VBoxContainer/Gameplay"]
layout_mode = 2

[connection signal="pressed" from="apply_and_go_back" to="." method="_on_apply_and_go_back_pressed"]
[connection signal="pressed" from="VBoxContainer/video_settings/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="value_changed" from="VBoxContainer/Gameplay/sensitivity_sldr" to="." method="_on_sensitivity_sldr_value_changed"]
